@@ -54,7 +54,7 @@ private:
 
     const std::string _desc;
 #ifdef _WIN32
-    const bool _isPeerLocal;
+    int _maxPacketSize;
 #endif
 };
 
