@@ -1,6 +1,10 @@
 Changes since version 3.2.0
 ---------------------------
 
+- Added Ice.TCP.RcvSize and Ice.TCP.SndSize properties. These
+  properties control the size of the TCP receive and send buffers for
+  the TCP and SSL transports.
+
 - Added support for opaque endpoints. For example:
 
   opaque -t 2 -v CTEyNy4wLjAuMREnAAD/////AA==
